--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 </head>
 
 <body>
-    <h1>Mi sitio</h1>
+    <div id="container">
+
+        <div id="post">
+            <h1>Mi sitio</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis, distinctio incidunt ab quod iure atque esse, amet vel repellendus sint laborum veniam culpa inventore, natus dicta autem harum? Magnam, rem?</p>
+        </div>
+    </div>
+
 </body>
 
 </html>
