--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
 <body>
     <div id="container">
-
+        <div id="cabecera">
+            Cabecera
+        </div>
         <div id="post">
             <h1>Mi sitio</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis, distinctio incidunt ab quod iure atque esse, amet vel repellendus sint laborum veniam culpa inventore, natus dicta autem harum? Magnam, rem?</p>
