--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div id="container">
         <div id="cabecera">
             Cabecera
+            <span id="tagline">Tu blog</span>
         </div>
         <div id="post">
             <h1>Mi sitio</h1>
