Se agregó un parrafo y se cambió la fuente a Helvetica

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div id="post">
             <h1>Mi sitio</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis, distinctio incidunt ab quod iure atque esse, amet vel repellendus sint laborum veniam culpa inventore, natus dicta autem harum? Magnam, rem?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex ratione maiores veritatis necessitatibus harum quas ut quidem, doloremque, ea nisi quos asperiores. Sapiente nulla consectetur autem excepturi eligendi tempora et?</p>
         </div>
     </div>
 
